services/capture-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: captureorderack
  labels:
    name: captureorderack
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: captureorderack
