services/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: captureorderack-ingress
spec:
  backend:
    serviceName: captureorderack
    servicePort: 8080
